--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ content="width=device-width, initial-scale=1.0"
                         <li><a href="#">Inicio</a></li>
                         <li><a href="https://www.google.com/maps/@4.7202122,-74.2296598,15z?entry=ttu"target="_blank">RUTAS</a></li>
                         <li><a href="#">SOBRE NOSOTROS</a></li>
-                        <li><a href="#">CONTACTENOS</a></li>
-                        <li><a href="#">BLOG</a></li> 
+                        <li><a href="#contacto">CONTACTENOS</a></li>
+                        <li><a href="aaaaaa.html">RESEÑAS</a></li> 
                     </ul>
                     <form class="search-form">
                         <input type="search" placeholder="Buscar...		" />
@@ -99,7 +99,7 @@ content="width=device-width, initial-scale=1.0"
 			<div class="container container-footer">
 				<div class="menu-footer">
 					<div class="contact-info">
-						<p class="title-footer">Información de Contacto</p>
+						<p class="title-footer" id="contacto">Información de Contacto</p>
 						<ul>
 							<li>
 								Dirección: 71 Pennington Lane Vernon Rockville, CT
